--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "img-loader": "^3.0.1",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-url-loader": "^2.3.2",
