--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "autoprefixer": "^9.6.0",
     "jquery": "^3.4.1"
   }
