--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "air-datepicker": "^2.2.3",
     "autoprefixer": "^9.7.2",
+    "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
     "normalize.css": "^8.0.1"
